--- a/간단한자기소개서sourcecode/sourcecode/index.html
+++ b/간단한자기소개서sourcecode/sourcecode/index.html
@@ -72,19 +72,18 @@
         </section>
         
         <section id="project">
-            <h2>Projects</h2>
+            <h2>추가</h2>
             <ol>
                 <li>
-                    <h3>재밌는 앱</h3>
-                    <video src="movie.mp4" controls></video>
-                    <p>Integer imperdiet accumsan dui eget imperdiet. Nulla cursus sed metus posuere fringilla.</p>
-                    <a href="https://mysite.com" target="_blank">mysite.com</a>
+                    <h3>도움되는 사이트</h3>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/m7wsrVQsVjI?si=0jYjw9U1XY15T6ra" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>emmet cheat sheet. vscode에 기본적으로 내장된 Javascript용 단축키. 이걸 이용하면 프로그래밍 속도가 매우 빨라진다.</p>
+                    <a href="https://docs.emmet.io/cheat-sheet/" target="_blank">docs.emmet.io</a>
                 </li>
                 <li>
                     <h3>관심있는 사이트</h3>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/watch?v=RfUlsRjxMM0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>노마드 코더. 
-                        현직 개발자로써 여러가지 개념 설명이나 아이디어,작동방식들을 공유해줌.
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/RfUlsRjxMM0?si=YntJ7I6bX-d8pTVN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>노마드 코더. 현직 개발자로써 여러가지 개념 설명이나 아이디어,작동방식들을 공유해줌.
                     </p>
                     <a href="https://nomadcoders.co/" target="_blank">nomadcoders.co</a>
                 </li>
