--- a/자기소개페이지_샘플_최대훈/profile.html
+++ b/자기소개페이지_샘플_최대훈/profile.html
@@ -288,11 +288,11 @@ window.onload = function() {
 		<nav>
 			<ul>
 				<li><a href="./">첫화면</a></li>
-				<li><a href="http://sirini.net">웹사이트</a></li>
+				<li><a href="https://github.com/FB1937">깃허브</a></li>
 				<li><a href="http://sirini.net/blog">블로그</a></li>
 				<li><a href="http://twitter.com/grboard">트위터</a></li>
 				<li><a href="http://facebook.com/heegeun.park">페이스북</a></li>
-				<li><a href="mailto:sirini@gmail.com">이메일</a></li>
+				<li><a href="choidaehoon0507@gmail.com">이메일</a></li>
 			</ul>
 		</nav>
 	</section>
@@ -304,7 +304,7 @@ window.onload = function() {
 	-->
 	<header>
 		<hgroup>
-			<h1>박희근 소개 페이지</h1>
+			<h1>최대훈 소개 페이지</h1>
 			<h2>만나서 반갑습니다! 이 페이지는 저를 소개하는 페이지입니다! 
 			이 페이지는 HTML5 기반으로 제작되었으며, 예제용으로 작성되었습니다.
 			아직까지 계속 작업중입니다. 현재 진행상태는 <progress id="nowStep" value="35" max="100">35%</progress> 입니다. 감사합니다!</h2>
@@ -319,9 +319,9 @@ window.onload = function() {
 				</hgroup>
 				
 				<ul>
-					<li>양정고등학교 졸업</li>
-					<li>부경대학교 전자정보통신공학부 04학번 (휴학중)</li>
-					<li>2005년 10월 웹표준 기반 설치형 공개 게시판 GR Board 개발, 유지</li>
+					<li>성도고등학교 졸업</li>
+					<li>경성대학교 소프트웨어 학과 20학번 (재학중)</li>
+					<li>2023년 3월 일본으로 1년동안 워킹홀리데이를 다녀옴</li>
 					<li>2010년 1월 삼성소프트웨어멤버십 20기로 선발됨</li>
 					<li>WEB 에 올인한지 8년 째</li>
 				</ul>
